Updated logo - Fixed some issues with buttons not showing on the search preference

--- a/src/components/SideMenu/SideMenu.style.css
+++ b/src/components/SideMenu/SideMenu.style.css
@@ -1,7 +1,7 @@
 .SideMenu div[role="document"] {
 
-  height: calc(100vh - 76px);
-  margin-top: 76px;
+  height: calc(100vh - 77px);
+  margin-top: 77px;
 }
 
 .SideMenu-title {
@@ -28,7 +28,8 @@
   justify-content: center;
   padding: 0.5rem;
   position: absolute;
-  width: calc(100vw - 1rem);
+  right: 0;
+  width: 100%;
 }
 
 .SideMenu-buttonsContainer button {
@@ -38,12 +39,13 @@
 
 .SideMenu-saveButton {
 
-  background-color: #bbcd32 !important;
+  background-color: #0063dc !important;
+  color: white !important;
 }
 
 .SideMenu-cancelButton {
 
-  background-color: #ff0800 !important;
+  background-color: #ff0084 !important;
   color: white !important;
 }
 
@@ -73,5 +75,12 @@
   .SideMenu div:first-child {
 
     background-color: initial;
+  }
+
+  .SideMenu-buttonsContainer {
+
+    bottom: 25px;
+    right: unset;
+    width: calc(100vw - 1rem);
   }
 }
